# ilswach-bot

./: .gitignore  Makefile  README.md  bot.py  ilswbot.db  initdb.py  islwbot.toml  main.py  pyproject.toml  requirements.txt  setup.py
ilswbot/: __init__.py  config.example.py  config.py  db.py  ilswbot.py  lukas_helper.py  session.py  subscriber.py
