[tool.poetry]
name = "ilswbot"
version = "1.0.0"
description = "Ist Lukas schon wach?"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/ilswbot"

[tool.poetry.dependencies]
python = "^3.6, ^3.7"
python-telegram-bot = "^12.0.0b1"
SQLAlchemy = "^1.2"
sqlalchemy-utils = "^0.34"
toml = "^0.10"
urllib3 = "^1.26"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
